@@ -85,7 +85,7 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>21.0</version>
+				<version>25.0-jre</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-cli</groupId>
