@@ -16,7 +16,9 @@ import org.junit.runners.Parameterized.Parameters;
 import com.gentics.madl.tx.Tx;
 import com.gentics.mesh.core.data.node.Node;
 import com.gentics.mesh.core.data.relationship.GraphPermission;
+import com.gentics.mesh.core.rest.graphql.GraphQLRequest;
 import com.gentics.mesh.core.rest.graphql.GraphQLResponse;
+import com.gentics.mesh.core.rest.role.RoleResponse;
 import com.gentics.mesh.parameter.impl.PublishParametersImpl;
 import com.gentics.mesh.parameter.impl.VersioningParametersImpl;
 import com.gentics.mesh.test.TestSize;
@@ -26,47 +28,28 @@ import com.gentics.mesh.test.context.MeshTestSetting;
 import io.vertx.core.json.JsonObject;
 
 @MeshTestSetting(testSize = TestSize.FULL, startServer = true)
-@RunWith(Parameterized.class)
-public class GraphQLPermissionTest extends AbstractMeshTest {
+public class GraphQLPermissionQueryTest extends AbstractMeshTest {
 
-	private final String queryName;
-
-	public GraphQLPermissionTest(String queryName) {
-		this.queryName = queryName;
-	}
-
-	@Parameters(name = "query={0}")
-	public static Collection<Object[]> paramData() {
-		Collection<Object[]> testData = new Vector<>();
-		testData.add(new Object[] { "node-perm-children-query" });
-		return testData;
-	}
+	private final String queryName = "rolePerms";
 
 	@Test
 	public void testReadPublishedNodeChildren() throws IOException {
+		RoleResponse anonymousRole = client().findRoles().toSingle().blockingGet()
+			.getData().stream()
+			.filter(role -> role.getName().equals("anonymous"))
+			.findAny().get();
 
-		// 1. Publish all nodes
-		String baseNodeUuid = tx(() -> project().getBaseNode().getUuid());
-		call(() -> client().publishNode(PROJECT_NAME, baseNodeUuid, new PublishParametersImpl().setRecursive(true)));
-
-		// 2. Revoke all read perm from all nodes also read_published from /News
-		try (Tx tx = tx()) {
-			for (Node node : project().getNodeRoot().findAll()) {
-				role().revokePermissions(node, GraphPermission.READ_PERM);
-			}
-			// Explicitly remove read_publish for a single node
-			role().revokePermissions(folder("news"), GraphPermission.READ_PUBLISHED_PERM);
-			tx.success();
-		}
+		GraphQLRequest request = new GraphQLRequest();
+		request.setQuery(getGraphQLQuery(queryName));
+		request.setVariables(new JsonObject().put("roleUuid", anonymousRole.getUuid()));
 
 		// 3. Invoke the query and assert that the nodes can still be loaded (due to read published)
-		GraphQLResponse response = call(
-			() -> client().graphqlQuery(PROJECT_NAME, getGraphQLQuery(queryName), new VersioningParametersImpl().setVersion("published")));
+		GraphQLResponse response = call(() -> client().graphql(PROJECT_NAME, request));
 		JsonObject json = new JsonObject(response.toJson());
 		System.out.println(json.encodePrettily());
 		assertThat(json).compliesToAssertions(queryName);
 	}
 
-
+	
 
 }
